--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,3 +15,31 @@ target_compile_features(
         INTERFACE
             cxx_std_17
 )
+
+#
+include(FetchContent)
+
+#
+FetchContent_Declare(
+    glfw
+    GIT_REPOSITORY https://github.com/glfw/glfw.git
+    GIT_TAG 3.3.7
+)
+
+#
+FetchContent_Declare(
+    glad
+    GIT_REPOSITORY https://github.com/Dav1dde/glad.git
+    GIT_TAG v0.1.36
+)
+
+#
+FetchContent_MakeAvailable(glfw glad)
+
+#
+target_link_libraries(
+    Bootstrap
+        PRIVATE
+            glfw
+            glad
+)
